--- a/src/Views/components/titles/style/index.scss
+++ b/src/Views/components/titles/style/index.scss
@@ -36,7 +36,7 @@ h2.main-title
             margin-left: 20px;
             li.tag
             {
-                padding: 4px 0;
+                padding: 4px 15px;
                 min-width: 89px;
                 display: flex;
                 justify-content: center;
@@ -220,7 +220,7 @@ h2.main-title
             {
                 li.tag
                 {
-                    padding: 3px 0;
+                    padding: 3px 15px;
                     min-width: 80px;
                     margin-right: 14px;
                     p
@@ -288,7 +288,7 @@ h2.main-title
                 margin-top: 16px !important;
                 li.tag
                 {
-                    padding: 3px 0;
+                    padding: 3px 15px;
                     min-width: 73px;
                 }
             }
