--- a/src/Views/main/Lesson/style/index.scss
+++ b/src/Views/main/Lesson/style/index.scss
@@ -147,6 +147,10 @@
         margin: 40px 0;
     }
 }
+.right-container.lesson.about-us
+{
+    padding-top: 50px !important;
+}
 
 
 
@@ -257,7 +261,10 @@
             margin: 38px 0;
         }
     }
-
+    .right-container.lesson.about-us
+    {
+        padding-top: 45px !important;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -328,6 +335,10 @@
             margin: 35px 0;
         }
     }
+    .right-container.lesson.about-us
+    {
+        padding-top: 40px !important;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -360,10 +371,11 @@
             {   
                 display: none;
             }
-            button:nth-child(4)
+            a:nth-child(4),
+            button.disabled:nth-child(4)
             {
                 flex: none;
-                margin-left: 32px;
+                margin-left: 87px;
             }
         }
     }
@@ -442,6 +454,10 @@
             margin: 30px 0;
         }
     }
+    .right-container.lesson.about-us
+    {
+        padding-top: 35px !important;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -474,6 +490,12 @@
                 {
                     font-size: 14px;
                 }
+            }
+            a:nth-child(4),
+            button.disabled:nth-child(4)
+            {
+                flex: none;
+                margin-left: 60px;
             }
         }
     }
@@ -548,6 +570,10 @@
             margin: 27px 0;
         }
     }
+    .right-container.lesson.about-us
+    {
+        padding-top: 32px !important;
+    }
 }
 
 @media screen and (max-width: 350px) {
@@ -560,5 +586,12 @@
                 margin-left: 11.5%;
             }
         }
+    }
+}
+@media screen and (max-width: 330px) {
+    a:nth-child(4),
+    button.disabled:nth-child(4)
+    {
+        margin-left: 50px;
     }
 }
