--- a/src/Views/main/Course/style/lesson button.scss
+++ b/src/Views/main/Course/style/lesson button.scss
@@ -76,7 +76,10 @@
                 }
             }
         }
-
+        button.locked
+        {
+            opacity: 0.6;
+        }
     }
     &.C1
     {
