--- a/src/Views/sections/Additional Information/style/index.scss
+++ b/src/Views/sections/Additional Information/style/index.scss
@@ -5,6 +5,7 @@ section.additionalInformation
     align-items: center;
     flex-wrap: wrap;
     position: relative;
+    z-index: 3;
     top: -32px;
     margin-bottom: -32px;
     .info-block
