--- a/src/Views/style/main.scss
+++ b/src/Views/style/main.scss
@@ -186,9 +186,9 @@ body, .App
     min-height: 100vh;
 }
 
-body
+html
 {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 @media screen and (max-width: 1450px) 
