--- a/src/Views/components/header/style/index.scss
+++ b/src/Views/components/header/style/index.scss
@@ -69,7 +69,7 @@ header
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                transform: translateY(-50%);
+                transform: translateY(-50%) translateX(-11px);
                 transition: 0.3s;
                 opacity: 0;
                 border: 1px solid #F2E9FF;
@@ -79,7 +79,7 @@ header
                 z-index: 10;
                 &.active
                 {
-                    transform: translateY(5px);
+                    transform: translateY(5px) translateX(-11px);
                     pointer-events: auto;
                     opacity: 1;
                 }
