--- a/src/Views/main/Lesson/style/index.scss
+++ b/src/Views/main/Lesson/style/index.scss
@@ -1,4 +1,4 @@
-.video
+.video-container
 {
     margin-top: 40px;
     padding: 20px;
@@ -47,13 +47,14 @@
             height: 56px;
         }
     }
-    video
+    iframe
     {
         border-radius: 16px;
         width: 100%;
+        height: 700px;
         transition: 0.2s;
     }
-    &.active video
+    &.active iframe
     {
         filter: brightness(0.7);
     }
@@ -153,7 +154,48 @@
 }
 
 
-
+@media screen and (max-width: 1700px) {
+    .video-container iframe
+    {
+        height: 600px;
+    }
+}
+@media screen and (max-width: 1500px) {
+    .video-container iframe
+    {
+        height: 500px;
+    }
+}
+@media screen and (max-width: 1200px) {
+    .video-container iframe
+    {
+        height: 450px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .video-container iframe
+    {
+        height: 400px;
+    }
+}
+@media screen and (max-width: 764px) {
+    .video-container iframe
+    {
+        height: 350px;
+    }
+}
+@media screen and (max-width: 564px) {
+    .video-container iframe
+    {
+        height: 250px;
+    }
+}
+@media screen and (max-width: 400px) {
+    .video-container iframe
+    {
+        height: 200px;
+    }
+}
 @media screen and (max-width: 1450px) {
     .lesson
     {
@@ -195,7 +237,7 @@
             }
         }
     }
-    .video
+    .video-container
     {
         margin-top: 38px;
         padding: 19px;
@@ -268,7 +310,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .video
+    .video-container
     {
         margin-top: 35px;
         padding: 17.5px;
@@ -379,7 +421,7 @@
             }
         }
     }
-    .video
+    .video-container
     {
         margin-top: 30px;
         padding: 15px;
@@ -499,7 +541,7 @@
             }
         }
     }
-    .video
+    .video-container
     {
         margin-top: 27px;
         padding: 13.5px;
