--- a/src/Views/sections/cover-page/style/index.scss
+++ b/src/Views/sections/cover-page/style/index.scss
@@ -6,6 +6,14 @@ section.cover-page
     justify-content: space-between;
     align-items: end;
     overflow: hidden;
+    .cover-page-video
+    {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 999;
+    }
     .cover-page-background
     {
         position: absolute;
